plugins/kotlin/idea/tests/testData/highlighterMetaInfo/unresolved/unresolvedImport.kt.highlighting.fir
// ALLOW_ERRORS
// CHECK_SYMBOL_NAMES
// HIGHLIGHTER_ATTRIBUTES_KEY

<!HIGHLIGHTING("severity='SYMBOL_TYPE_SEVERITY'; highlightingTextAttributesKey='KOTLIN_KEYWORD'")!>import<!> <!HIGHLIGHTING("severity='ERROR'; descr='[UNRESOLVED_IMPORT] Unresolved reference 'unresolved'.'; highlightingTextAttributesKey='WRONG_REFERENCES_ATTRIBUTES'")!>unresolved<!>
